--- a/notebook/demo_baseline.ipynb
+++ b/notebook/demo_baseline.ipynb
@@ -1,9 +1,35 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "94312470",
+   "metadata": {},
+   "source": [
+    "![header](../figures/logos_partenaires._cmems_se.jpg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8962af62",
+   "metadata": {},
+   "source": [
+    "# Baseline for SWOT error calibration\n",
+    "\n",
+    "<div style=\"text-align: right\"><i> 2022-08-24 DEMO_BASELINE </i></div>\n",
+    "\n",
+    "***\n",
+    "**Authors:**  Datlas, IGE, IMT-Atlantique & CLS <br>\n",
+    "**Copyright:** 2022 Datlas, IGE, IMT-Atlantique & CLS <br>\n",
+    "**License:** MIT\n",
+    "\n",
+    "<div class=\"alert alert-block alert-success\">\n",
+    "<h1><center>Baseline of across track slope removing</center></h1></div>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b382dbd3",
+   "execution_count": 6,
+   "id": "e3dc9079",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,89 +44,133 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "980aab26",
+   "cell_type": "markdown",
+   "id": "03baf4c8",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "list_of_file = sorted(glob.glob('../data/eNATL60-BLB002/gomez/SWOT_L2_LR_Filtered_013_*.nc'))\n",
-    "len(list_of_file)"
+    "<div class=\"alert alert-info\" role=\"alert\">\n",
+    "\n",
+    "<h2>1. Downloading data challenge inputs </h2>\n",
+    "\n",
+    "</div>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "77541456",
+   "execution_count": 7,
+   "id": "f32bce99",
    "metadata": {},
    "outputs": [],
    "source": [
-    "output_dir = '../results/demo_beanchmark_swot_filtering_median'\n",
-    "os.system(f'mkdir - p {output_dir}')"
+    "# Check if inputs have already been downloaded otherwise do\n",
+    "if len(os.listdir('../inputs'))<2:\n",
+    "    # Get pseuso-observation\n",
+    "    print('Downloading and unzipping inputs')\n",
+    "    !wget https://ige-meom-opendap.univ-grenoble-alpes.fr/thredds/fileServer/meomopendap/extract/ocean-data-challenges/2022c_SWOT_error_calibration_GS/dc_SWOTcalibGS_inputs.tar.gz\n",
+    "    !tar -xvf dc_SWOTcalibGS_inputs.tar.gz dc_SWOTcalibGS_inputs    \n",
+    "    !mv dc_SWOTcalibGS_inputs  ../inputs/    \n",
+    "    !rm dc_SWOTcalibGS_inputs.tar.gz "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "773fdfc7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "15c8fe84",
+   "execution_count": 8,
+   "id": "1cc2dbf5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "swt = SwotTrack(list_of_file[0])"
+    "list_of_file_inputs = sorted(glob.glob('../inputs/dc_SWOTcalibGS_inputs/dc_SWOTcalibGS_input_pass*.nc')) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b13c4039",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-info\" role=\"alert\">\n",
+    "\n",
+    "<h2>2. Preping experiment paths and repositories </h2>\n",
+    "\n",
+    "</div>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ad2e1c0f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "swt.dset"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c7c3966d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "swt.apply_median_filter('simulated_noise_ssh_karin', 10, 'ssh_karin_filt')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "af063aa4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "swt.display_track()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5dd56ae4",
+   "execution_count": 9,
+   "id": "fab17aa8",
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
+    "output_dir = '../results/demo_baseline'\n",
+    "__ = os.system(f'mkdir -p {output_dir}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7c9ef584",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-info\" role=\"alert\">\n",
+    "\n",
+    "<h2>3. Calibrating SWOT data with baseline </h2>\n",
+    "\n",
+    "<h3>Baseline: removing the averaged across-track slope </h3>\n",
+    "\n",
+    "\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "54d13437",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "../inputs/dc_SWOTcalibGS_inputs/dc_SWOTcalibGS_input_pass02.nc\n",
+      "../inputs/dc_SWOTcalibGS_inputs/dc_SWOTcalibGS_input_pass03.nc\n",
+      "../inputs/dc_SWOTcalibGS_inputs/dc_SWOTcalibGS_input_pass04.nc\n",
+      "../inputs/dc_SWOTcalibGS_inputs/dc_SWOTcalibGS_input_pass05.nc\n",
+      "../inputs/dc_SWOTcalibGS_inputs/dc_SWOTcalibGS_input_pass06.nc\n",
+      "../inputs/dc_SWOTcalibGS_inputs/dc_SWOTcalibGS_input_pass07.nc\n",
+      "../inputs/dc_SWOTcalibGS_inputs/dc_SWOTcalibGS_input_pass12.nc\n",
+      "../inputs/dc_SWOTcalibGS_inputs/dc_SWOTcalibGS_input_pass13.nc\n",
+      "../inputs/dc_SWOTcalibGS_inputs/dc_SWOTcalibGS_input_pass14.nc\n",
+      "../inputs/dc_SWOTcalibGS_inputs/dc_SWOTcalibGS_input_pass15.nc\n",
+      "../inputs/dc_SWOTcalibGS_inputs/dc_SWOTcalibGS_input_pass16.nc\n",
+      "../inputs/dc_SWOTcalibGS_inputs/dc_SWOTcalibGS_input_pass17.nc\n",
+      "../inputs/dc_SWOTcalibGS_inputs/dc_SWOTcalibGS_input_pass22.nc\n",
+      "../inputs/dc_SWOTcalibGS_inputs/dc_SWOTcalibGS_input_pass23.nc\n",
+      "../inputs/dc_SWOTcalibGS_inputs/dc_SWOTcalibGS_input_pass24.nc\n",
+      "../inputs/dc_SWOTcalibGS_inputs/dc_SWOTcalibGS_input_pass25.nc\n",
+      "../inputs/dc_SWOTcalibGS_inputs/dc_SWOTcalibGS_input_pass26.nc\n",
+      "../inputs/dc_SWOTcalibGS_inputs/dc_SWOTcalibGS_input_pass27.nc\n",
+      "../inputs/dc_SWOTcalibGS_inputs/dc_SWOTcalibGS_input_pass32.nc\n",
+      "../inputs/dc_SWOTcalibGS_inputs/dc_SWOTcalibGS_input_pass33.nc\n",
+      "../inputs/dc_SWOTcalibGS_inputs/dc_SWOTcalibGS_input_pass34.nc\n",
+      "../inputs/dc_SWOTcalibGS_inputs/dc_SWOTcalibGS_input_pass35.nc\n",
+      "../inputs/dc_SWOTcalibGS_inputs/dc_SWOTcalibGS_input_pass36.nc\n",
+      "../inputs/dc_SWOTcalibGS_inputs/dc_SWOTcalibGS_input_pass37.nc\n",
+      "CPU times: user 897 ms, sys: 161 ms, total: 1.06 s\n",
+      "Wall time: 1.4 s\n"
+     ]
+    }
+   ],
+   "source": [
     "%%time\n",
-    "### TODO Paralelize this loop\n",
-    "for filename in list_of_file:\n",
-    "    swt = SwotTrack(filename) \n",
-    "    swt.apply_median_filter('simulated_noise_ssh_karin', 10, 'ssh_karin_filt')\n",
+    "\n",
+    "### Loop over each SWOT pass\n",
+    "for filename in list_of_file_inputs:\n",
+    "    print(filename)\n",
+    "    swt = SwotTrack(filename)  \n",
+    "    swt.apply_ac_track_slope_calib('ssh_err', 'ssh_err_calib')\n",
     "    output_filename = f'{output_dir}/{os.path.basename(filename)}'\n",
     "    swt.to_netcdf('all', output_filename)"
    ]
@@ -108,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6f94bf4",
+   "id": "50ae8bbd",
    "metadata": {},
    "outputs": [],
    "source": []
