Removing unnecessary filter functions

--- a/notebook/demo_baseline.ipynb
+++ b/notebook/demo_baseline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "94312470",
+   "id": "65d75e7f",
    "metadata": {},
    "source": [
     "![header](../figures/logos_partenaires._cmems_se.jpg)"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8962af62",
+   "id": "e97ce19f",
    "metadata": {},
    "source": [
     "# Baseline for SWOT error calibration\n",
@@ -28,8 +28,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "e3dc9079",
+   "execution_count": 1,
+   "id": "5f8ec4a8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03baf4c8",
+   "id": "b6e866cf",
    "metadata": {},
    "source": [
     "<div class=\"alert alert-info\" role=\"alert\">\n",
@@ -57,8 +57,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "f32bce99",
+   "execution_count": 2,
+   "id": "c5362b47",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,8 +74,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "1cc2dbf5",
+   "execution_count": 3,
+   "id": "1933f74a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b13c4039",
+   "id": "53e116ec",
    "metadata": {},
    "source": [
     "<div class=\"alert alert-info\" role=\"alert\">\n",
@@ -96,8 +96,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "fab17aa8",
+   "execution_count": 4,
+   "id": "ea4629c5",
    "metadata": {
     "scrolled": true
    },
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c9ef584",
+   "id": "2b4f4fa9",
    "metadata": {},
    "source": [
     "<div class=\"alert alert-info\" role=\"alert\">\n",
@@ -124,8 +124,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "54d13437",
+   "execution_count": 5,
+   "id": "2dfaaafc",
    "metadata": {
     "scrolled": false
    },
@@ -158,8 +158,8 @@
       "../inputs/dc_SWOTcalibGS_inputs/dc_SWOTcalibGS_input_pass35.nc\n",
       "../inputs/dc_SWOTcalibGS_inputs/dc_SWOTcalibGS_input_pass36.nc\n",
       "../inputs/dc_SWOTcalibGS_inputs/dc_SWOTcalibGS_input_pass37.nc\n",
-      "CPU times: user 897 ms, sys: 161 ms, total: 1.06 s\n",
-      "Wall time: 1.4 s\n"
+      "CPU times: user 749 ms, sys: 128 ms, total: 878 ms\n",
+      "Wall time: 1.02 s\n"
      ]
     }
    ],
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50ae8bbd",
+   "id": "bc141b37",
    "metadata": {},
    "outputs": [],
    "source": []
