Adding CER method

--- a/quickstart.ipynb
+++ b/quickstart.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d718ed8a",
+   "id": "344d4868",
    "metadata": {},
    "source": [
     "![header](./figures/logos_partenaires._cmems_se.jpg)"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5baffbaf",
+   "id": "29134bad",
    "metadata": {},
    "source": [
     "# Quickstart SWOT error calibration\n",
@@ -19,7 +19,7 @@
     "\n",
     "***\n",
     "**Authors:**  Datlas, IMT Atlantique & IGE <br>\n",
-    "**Copyright:** 2022 Datlas <br>\n",
+    "**Copyright:** 2022 Datlas, IGE, IMT-Atlantique & CLS <br>\n",
     "**License:** MIT\n",
     "\n",
     "<div class=\"alert alert-block alert-success\">\n",
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "1868fe4b",
+   "id": "2f859ac8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f415a1b2",
+   "id": "40a70720",
    "metadata": {},
    "source": [
     "<div class=\"alert alert-info\" role=\"alert\">\n",
@@ -62,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "ab3b8dcf",
+   "id": "8a200d1a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42e6eb06",
+   "id": "f467c3bb",
    "metadata": {},
    "source": [
     "<div class=\"alert alert-info\" role=\"alert\">\n",
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "9e8c8759",
+   "id": "0955602a",
    "metadata": {},
    "outputs": [
     {
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c84235a2",
+   "id": "358b5e54",
    "metadata": {},
    "source": [
     "<div class=\"alert alert-info\" role=\"alert\">\n",
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3fb18bed",
+   "id": "654c2141",
    "metadata": {},
    "source": [
     "The geostrophic currents calculation is:\n",
@@ -614,7 +614,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "88fd2659",
+   "id": "0f8b805c",
    "metadata": {
     "scrolled": false
    },
@@ -626,7 +626,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1be1304",
+   "id": "592b43ca",
    "metadata": {},
    "source": [
     "<div class=\"alert alert-info\" role=\"alert\">\n",
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61328fcd",
+   "id": "a8e82852",
    "metadata": {},
    "source": [
     "The relative vorticity (normalized by $f$) is derived from the geostrophic current field:\n",
@@ -653,7 +653,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "69f76763",
+   "id": "59d596c8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -663,7 +663,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76fd429f",
+   "id": "347a67c2",
    "metadata": {},
    "source": [
     "<div class=\"alert alert-info\" role=\"alert\">\n",
@@ -677,7 +677,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "d38b9db7",
+   "id": "68162eb1",
    "metadata": {
     "scrolled": false,
     "tags": []
@@ -700,7 +700,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d82d05cb",
+   "id": "0f32726d",
    "metadata": {},
    "source": [
     "<div class=\"alert alert-info\" role=\"alert\">\n",
@@ -713,7 +713,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "53861367",
+   "id": "9bd2b66b",
    "metadata": {
     "tags": []
    },
@@ -735,7 +735,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a028984b",
+   "id": "984225a4",
    "metadata": {},
    "source": [
     "<div class=\"alert alert-info\" role=\"alert\">\n",
@@ -748,7 +748,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "c7ec5653",
+   "id": "0275b56a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -759,7 +759,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c36481a",
+   "id": "7bd68f3c",
    "metadata": {},
    "source": [
     "<div class=\"alert alert-info\" role=\"alert\">\n",
@@ -772,7 +772,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "939e7eec",
+   "id": "9960fe73",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -782,7 +782,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d712fcb3",
+   "id": "cade13d2",
    "metadata": {},
    "source": [
     "<div class=\"alert alert-info\" role=\"alert\">\n",
@@ -795,7 +795,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "1488f8b5",
+   "id": "fa0f0537",
    "metadata": {},
    "outputs": [
     {
@@ -815,7 +815,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51923818",
+   "id": "2c20114d",
    "metadata": {},
    "source": [
     "<div class=\"alert alert-info\" role=\"alert\">\n",
@@ -828,7 +828,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "63dc2057",
+   "id": "7f544b12",
    "metadata": {
     "scrolled": false
    },
@@ -851,7 +851,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "1b70be61",
+   "id": "fa7063f9",
    "metadata": {},
    "outputs": [
     {
@@ -875,7 +875,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59797300",
+   "id": "bc478580",
    "metadata": {},
    "source": [
     "<div class=\"alert alert-info\" role=\"alert\">\n",
@@ -888,7 +888,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "315d907f",
+   "id": "c5f6e26e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -900,7 +900,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d40275f",
+   "id": "535dbc60",
    "metadata": {},
    "outputs": [],
    "source": []
