Adding isotropic psd

--- a/notebook/demo_baseline.ipynb
+++ b/notebook/demo_baseline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "65d75e7f",
+   "id": "e47a02a4",
    "metadata": {},
    "source": [
     "![header](../figures/logos_partenaires._cmems_se.jpg)"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e97ce19f",
+   "id": "dda1d278",
    "metadata": {},
    "source": [
     "# Baseline for SWOT error calibration\n",
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "5f8ec4a8",
+   "id": "106a0b58",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b6e866cf",
+   "id": "4e99103e",
    "metadata": {},
    "source": [
     "<div class=\"alert alert-info\" role=\"alert\">\n",
@@ -58,7 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "c5362b47",
+   "id": "3bfca83b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "1933f74a",
+   "id": "5a6528da",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53e116ec",
+   "id": "b599f73f",
    "metadata": {},
    "source": [
     "<div class=\"alert alert-info\" role=\"alert\">\n",
@@ -97,19 +97,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "ea4629c5",
+   "id": "1b67148e",
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "output_dir = '../results/demo_baseline'\n",
+    "output_dir = '../results/demo_baseline0'\n",
     "__ = os.system(f'mkdir -p {output_dir}')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "2b4f4fa9",
+   "id": "d6334025",
    "metadata": {},
    "source": [
     "<div class=\"alert alert-info\" role=\"alert\">\n",
@@ -125,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "2dfaaafc",
+   "id": "dfa153a5",
    "metadata": {
     "scrolled": false
    },
@@ -158,8 +158,8 @@
       "../inputs/dc_SWOTcalibGS_inputs/dc_SWOTcalibGS_input_pass35.nc\n",
       "../inputs/dc_SWOTcalibGS_inputs/dc_SWOTcalibGS_input_pass36.nc\n",
       "../inputs/dc_SWOTcalibGS_inputs/dc_SWOTcalibGS_input_pass37.nc\n",
-      "CPU times: user 749 ms, sys: 128 ms, total: 878 ms\n",
-      "Wall time: 1.02 s\n"
+      "CPU times: user 4.88 s, sys: 284 ms, total: 5.16 s\n",
+      "Wall time: 6.71 s\n"
      ]
     }
    ],
@@ -170,7 +170,7 @@
     "for filename in list_of_file_inputs:\n",
     "    print(filename)\n",
     "    swt = SwotTrack(filename)  \n",
-    "    swt.apply_ac_track_slope_calib('ssh_err', 'ssh_err_calib')\n",
+    "    swt.apply_ac_track_slope_calib0('ssh_err', 'ssh_err_calib')\n",
     "    output_filename = f'{output_dir}/{os.path.basename(filename)}'\n",
     "    swt.to_netcdf('all', output_filename)"
    ]
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc141b37",
+   "id": "35f8a1c0",
    "metadata": {},
    "outputs": [],
    "source": []
