--- a/notebook/demo_evaluate_baseline.ipynb
+++ b/notebook/demo_evaluate_baseline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4866f7b4",
+   "id": "138764d7",
    "metadata": {},
    "source": [
     "![header](../figures/logos_partenaires._cmems_se.jpg)"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2db9fbc7",
+   "id": "31b24ab9",
    "metadata": {},
    "source": [
     "# Evaluating baseline for SWOT error calibration\n",
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e83e2b4",
+   "id": "f11d6f31",
    "metadata": {},
    "source": [
     "***\n",
@@ -54,14 +54,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ab8d80b",
+   "id": "cbc5a444",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c08488af",
+   "id": "f1231e89",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "119087cb",
+   "id": "137931cd",
    "metadata": {},
    "source": [
     "<div class=\"alert alert-info\" role=\"alert\">\n",
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5b34d3b",
+   "id": "9ce02cb2",
    "metadata": {},
    "source": [
     "## Data challenge inputs"
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "fcfe1512",
+   "id": "86ac7160",
    "metadata": {
     "scrolled": true
    },
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "2c860c54",
+   "id": "a0630ced",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8aa2a209",
+   "id": "dcadd280",
    "metadata": {},
    "source": [
     "## Filtered outputs to evaluate"
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "971ac518",
+   "id": "669c79c9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22f3d0fa",
+   "id": "26b25744",
    "metadata": {},
    "source": [
     "<div class=\"alert alert-info\" role=\"alert\">\n",
@@ -162,7 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "08604b12",
+   "id": "0494759c",
    "metadata": {
     "scrolled": false
    },
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94b955a0",
+   "id": "00a5b4db",
    "metadata": {},
    "source": [
     "<div class=\"alert alert-info\" role=\"alert\">\n",
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "427379f4",
+   "id": "30c98962",
    "metadata": {},
    "source": [
     "## 3.1 Parameters"
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "e6803123",
+   "id": "e8ff6658",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bfaaab7d",
+   "id": "926d060a",
    "metadata": {},
    "source": [
     "## 3.2 Compute grid boxes statistics"
@@ -249,7 +249,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "2d4b0610",
+   "id": "dc6e8e2c",
    "metadata": {
     "scrolled": false
    },
@@ -280,8 +280,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 6.51 s, sys: 413 ms, total: 6.93 s\n",
-      "Wall time: 6.9 s\n"
+      "CPU times: user 5.5 s, sys: 241 ms, total: 5.74 s\n",
+      "Wall time: 5.16 s\n"
      ]
     }
    ],
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e254673",
+   "id": "cc196c73",
    "metadata": {},
    "source": [
     "## 3.4 Compute Spectral scores"
@@ -308,7 +308,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "abae38c2",
+   "id": "2a71e2b4",
    "metadata": {
     "scrolled": false
    },
@@ -327,8 +327,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 5.8 s, sys: 589 ms, total: 6.38 s\n",
-      "Wall time: 6.03 s\n"
+      "CPU times: user 5.3 s, sys: 448 ms, total: 5.75 s\n",
+      "Wall time: 5.13 s\n"
      ]
     }
    ],
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ee67e09",
+   "id": "a753bb3c",
    "metadata": {},
    "source": [
     "<div class=\"alert alert-info\" role=\"alert\">\n",
@@ -359,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "63cacfae",
+   "id": "798a4190",
    "metadata": {
     "tags": []
    },
@@ -369,27 +369,27 @@
      "output_type": "stream",
      "text": [
       "Summary of the leaderboard metrics:\n",
-      "|    | Method   | Field                          |   µ(RMSE) |   λ(SNR1) [km] | Reference           |\n",
-      "|---:|:---------|:-------------------------------|----------:|---------------:|:--------------------|\n",
-      "|  0 | no calib | SSH [m]                        |  3.3952   |          116.3 | demo_baseline.ipynb |\n",
-      "|  1 | no calib | Geostrophic current [m.s$^-1$] |  9.43752  |          nan   | demo_baseline.ipynb |\n",
-      "|  2 | no calib | Relative vorticity []          |  0.759946 |           37.9 | demo_baseline.ipynb |\n",
-      "|    | Method   | Field                          |   µ(RMSE) |   λ(SNR1) [km] | Reference           |\n",
-      "|---:|:---------|:-------------------------------|----------:|---------------:|:--------------------|\n",
-      "|  0 | BASELINE | SSH [m]                        |  0.145103 |           83.9 | demo_baseline.ipynb |\n",
-      "|  1 | BASELINE | Geostrophic current [m.s$^-1$] |  0.287818 |           84.9 | demo_baseline.ipynb |\n",
-      "|  2 | BASELINE | Relative vorticity []          |  0.528865 |           36.5 | demo_baseline.ipynb |\n"
+      "|    | Method   | Field                          |   µ(RMSE) |   λ(SNR1) [km] | Reference   |\n",
+      "|---:|:---------|:-------------------------------|----------:|---------------:|:------------|\n",
+      "|  0 | no calib | SSH [m]                        |  3.3952   |          116.3 |             |\n",
+      "|  1 | no calib | Geostrophic current [m.s$^-1$] |  9.43752  |          nan   |             |\n",
+      "|  2 | no calib | Relative vorticity []          |  0.759946 |           37.9 |             |\n",
+      "|    | Method   | Field                          |   µ(RMSE) |   λ(SNR1) [km] | Reference                    |\n",
+      "|---:|:---------|:-------------------------------|----------:|---------------:|:-----------------------------|\n",
+      "|  0 | BASELINE | SSH [m]                        |  0.145103 |           83.9 | demo_generate_baseline.ipynb |\n",
+      "|  1 | BASELINE | Geostrophic current [m.s$^-1$] |  0.287818 |           84.9 | demo_generate_baseline.ipynb |\n",
+      "|  2 | BASELINE | Relative vorticity []          |  0.528865 |           36.5 | demo_generate_baseline.ipynb |\n"
      ]
     }
    ],
    "source": [
-    "baseline_bench.summary('demo_baseline.ipynb')"
+    "baseline_bench.summary('demo_generate_baseline.ipynb')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cbfc4a0f",
+   "id": "7778788f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -397,7 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "733eeb6a",
+   "id": "3889c218",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -405,7 +405,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77aaa2b5",
+   "id": "36beb047",
    "metadata": {},
    "outputs": [],
    "source": []
