new compare_evaluation notebook and psd with window=Tukey

--- a/notebook/evaluate_CalCNNmethod_calibration.ipynb
+++ b/notebook/evaluate_CalCNNmethod_calibration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "joint-october",
+   "id": "5048ad5f",
    "metadata": {},
    "source": [
     "![header](../figures/logos_partenaires._cmems_se.jpg)"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "legendary-canberra",
+   "id": "3a80ba73",
    "metadata": {},
    "source": [
     "# Evaluating CalCNN method for SWOT error calibration\n",
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "loved-pioneer",
+   "id": "e321a811",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "saving-cookbook",
+   "id": "118e20fa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "crude-office",
+   "id": "07bd2fbe",
    "metadata": {},
    "source": [
     "<div class=\"alert alert-info\" role=\"alert\">\n",
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "increased-karaoke",
+   "id": "46cdd030",
    "metadata": {},
    "source": [
     "## Data challenge inputs"
@@ -73,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "optional-tamil",
+   "id": "19b1a28d",
    "metadata": {
     "scrolled": true
    },
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "exterior-academy",
+   "id": "872f7978",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "prostate-atmosphere",
+   "id": "6352da55",
    "metadata": {},
    "source": [
     "## Filtered outputs to evaluate"
@@ -158,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "minus-wealth",
+   "id": "b697e455",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "running-credit",
+   "id": "21a40bdc",
    "metadata": {},
    "outputs": [
     {
@@ -630,7 +630,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "closed-supervisor",
+   "id": "1e334b0d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -638,7 +638,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "traditional-filing",
+   "id": "7967f2a8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -669,7 +669,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "appropriate-honor",
+   "id": "4d3db2d0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -678,7 +678,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "identified-range",
+   "id": "119c88eb",
    "metadata": {},
    "source": [
     "<div class=\"alert alert-info\" role=\"alert\">\n",
@@ -691,8 +691,10 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "missing-parts",
-   "metadata": {},
+   "id": "c729408b",
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -740,7 +742,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "vocational-parade",
+   "id": "3934425e",
    "metadata": {},
    "outputs": [
     {
@@ -1129,7 +1131,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "compact-sixth",
+   "id": "c0fc2742",
    "metadata": {},
    "source": [
     "<div class=\"alert alert-info\" role=\"alert\">\n",
@@ -1141,7 +1143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "neither-voltage",
+   "id": "80b3fb41",
    "metadata": {},
    "source": [
     "## 3.1 Parameters"
@@ -1150,7 +1152,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "desperate-crazy",
+   "id": "a842306a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1165,7 +1167,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "prompt-smell",
+   "id": "5552d13e",
    "metadata": {},
    "source": [
     "## 3.2 Compute grid boxes statistics"
@@ -1174,7 +1176,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "cultural-scroll",
+   "id": "76ccc3c7",
    "metadata": {},
    "outputs": [
     {
@@ -1222,7 +1224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "severe-affair",
+   "id": "cc92e732",
    "metadata": {},
    "source": [
     "## 3.4 Compute Spectral scores"
@@ -1231,7 +1233,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "chicken-wrong",
+   "id": "7fd1d5cf",
    "metadata": {},
    "outputs": [
     {
@@ -1267,7 +1269,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "communist-syndicate",
+   "id": "c1415dd9",
    "metadata": {},
    "source": [
     "<div class=\"alert alert-info\" role=\"alert\">\n",
@@ -1280,7 +1282,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "universal-treasurer",
+   "id": "1a9f295e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1288,7 +1290,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "alternate-coral",
+   "id": "85538894",
    "metadata": {
     "tags": []
    },
@@ -1318,7 +1320,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "compressed-charge",
+   "id": "8e2dbc35",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1326,9 +1328,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "swot-cal-dc",
+   "display_name": "env-dc-swot-filtering",
    "language": "python",
-   "name": "swot-cal-dc"
+   "name": "env-dc-swot-filtering"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1340,7 +1342,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
