Adding independant nadir evaluation

--- a/notebooks_evaluate_on_nadirs/evaluation_onnadirs_CalCNN.ipynb
+++ b/notebooks_evaluate_on_nadirs/evaluation_onnadirs_CalCNN.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "adapted-cotton",
+   "id": "72f86a99",
    "metadata": {},
    "source": [
     "![header](../figures/logos_partenaires._cmems_se.jpg)"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "royal-dependence",
+   "id": "60a10188",
    "metadata": {},
    "source": [
     "# Evaluate CER method on Nadir tracks\n",
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "billion-mumbai",
+   "id": "a44bce47",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "turkish-template",
+   "id": "72cc3aec",
    "metadata": {},
    "source": [
     "<div class=\"alert alert-info\" role=\"alert\">\n",
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "large-savings",
+   "id": "d375d774",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "catholic-concert",
+   "id": "3b80d46f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "simple-fancy",
+   "id": "41f24538",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "clinical-rough",
+   "id": "23c4eb18",
    "metadata": {},
    "source": [
     "<div class=\"alert alert-info\" role=\"alert\">\n",
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "wooden-noise",
+   "id": "377233b1",
    "metadata": {},
    "source": [
     "## Interpolating input data"
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "green-shannon",
+   "id": "e396fe4e",
    "metadata": {
     "scrolled": true
    },
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "specified-shoulder",
+   "id": "286e55a8",
    "metadata": {},
    "source": [
     "## Interpolating calibration"
@@ -162,7 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "friendly-appliance",
+   "id": "863c16a6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "racial-subscriber",
+   "id": "8995c462",
    "metadata": {},
    "outputs": [
     {
@@ -653,7 +653,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "educated-industry",
+   "id": "f81badd1",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -661,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "proper-terminal",
+   "id": "0201b80c",
    "metadata": {},
    "outputs": [
     {
@@ -705,7 +705,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "coastal-liverpool",
+   "id": "c54d8e39",
    "metadata": {
     "scrolled": true
    },
@@ -721,7 +721,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "thermal-buyer",
+   "id": "021881a4",
    "metadata": {},
    "source": [
     "<div class=\"alert alert-info\" role=\"alert\">\n",
@@ -734,7 +734,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "small-innocent",
+   "id": "7a28ecf2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -753,7 +753,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "preliminary-porter",
+   "id": "35c8ed69",
    "metadata": {},
    "source": [
     "## 4.1 - Plotting point-wise error on the nadir tracks"
@@ -762,7 +762,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "selective-picture",
+   "id": "6d83a46b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -770,7 +770,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "blond-venice",
+   "id": "7bdecbbc",
    "metadata": {},
    "outputs": [
     {
@@ -823,7 +823,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "removed-livestock",
+   "id": "dc1e781f",
    "metadata": {},
    "source": [
     "## 4.2 - Plotting point-wise error across tracks"
@@ -832,7 +832,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "spatial-academy",
+   "id": "71ac7879",
    "metadata": {},
    "outputs": [
     {
@@ -852,7 +852,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "animal-learning",
+   "id": "0d5b23cf",
    "metadata": {},
    "source": [
     "## 4.3 - Plotting power spectrum density and noise-to-signal ratio "
@@ -861,7 +861,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "therapeutic-texture",
+   "id": "1fc55824",
    "metadata": {},
    "outputs": [
     {
@@ -917,9 +917,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "swot-cal-dc",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "swot-cal-dc"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -931,7 +931,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.6.13"
   }
  },
  "nbformat": 4,
